src/snapshots/afrotd__parser__tests__interpreation_html_6.4.1_12.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.XII
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 5 von der A-30. Punt Receiver B22 befindet sich an der B-30
            in Position zum Fangen eines Kicks. Er gibt kein Signal. A88
            befindet sich seitlich innerhalb eines Meters neben B22. A88
            berührt B22 nicht. B22 fängt an der B-30 den Kick und wird
            anschließend an der B-32 getackelt. B22 wird durch die Präsenz von
            A88 nicht gezwungen, seine Position oder die Art des Fangens zu
            ändern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel. Keine Behinderung beim Fangen eines Kicks. A88
                befindet sich weniger als einen Meter von B22 entfernt,
                behindert jedoch nicht die Fangmöglichkeit von B22, da er nicht
                direkt vor ihm ist B‘s Ball, 1. und 10 von der B-32.
            </p>
        </details>
    </div>
</article>
