src/snapshots/afrotd__parser__tests__interpreation_html_6.4.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während ein Kick jenseits der neutralen Zone fliegt, steht oder
            läuft A1 zwischen B1 und dem fliegenden Kick. (a) A1 wird vom Ball
            berührt, während B1 in Position ist, den Kick zu fangen oder (b) B1
            prallt gegen A1 bei dem Versuch, den Kick zu fangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) und (b) Behinderung beim Fangen eines Kicks – Strafe: 15
                Meter vom Punkt des Fouls.
            </p>
        </details>
    </div>
</article>
