src/snapshots/afrotd__parser__tests__interpreation_html_6.4.1_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Team A-Spieler berührt jenseits der neutralen Zone als erster
            oder fängt einen Scrimmage Kick, den kein Receiver hätte fangen
            können, während der Ball flog.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegales Berühren, aber keine Behinderung beim Fangen eines
                Kicks.
            </p>
        </details>
    </div>
</article>
