src/snapshots/afrotd__parser__tests__interpreation_html_6.5.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem gültigen oder ungültigen Signal mufft B1 den Punt und
            B2, der nicht signalisierte, fängt den Ball nach dem Kick. Rege-
            lung: Der Ball wird dead, als er von B2 gefangen wird. Er wird
            anschließend an den Punkt der ersten Berührung durch B1 platziert.
            A.R. 6.5.1.II B1 steht mit einem Bein im Aus und mit dem anderen im
            Spielfeld, als er ein gültiges oder ein ungültiges Fair
            Catch-Signal anzeigt. Er fängt dann den Kick inbounds.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Es gibt keine Regelung für einen Receiving Team Spieler, der
                während eines Kicks ins Aus geht. Das Fangen ist legal und der
                Ball wird mit dem Fangen dead.
            </p>
        </details>
    </div>
</article>
