src/snapshots/afrotd__parser__tests__interpreation_html_6.5.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Free Kicks gibt B21 an der B-5 ein gültiges Fair
            Catch Signal. B21 mufft den Kick und recovert den Ball sofort an
            der B-5.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein vollständiger Fair Catch. B’s Ball, 1. und 10 von der B-5.
            </p>
        </details>
    </div>
</article>
