src/snapshots/afrotd__parser__tests__interpreation_html_6.5.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A puntet. Nachdem B1 an seiner B-20 einen Fair Catch angezeigt
            hat, lässt er absichtlich den Ball zu Boden fallen, wo B2 den
            abprallenden Ball recovert und ihn zu der B-35 trägt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball ist am Punkt der Recovery dead. Der Raumgewinn ist
                illegal. Strafe – 5 Meter vom Succeeding Spot, dem Punkt der
                Recovery. Team B’s Ball, First Down und 10 (Regel 5.2.7).
            </p>
        </details>
    </div>
</article>
