src/snapshots/afrotd__parser__tests__interpreation_html_6.5.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Während sich ein Free Kick in der Luft befindet, gibt B21 ein
            winkendes Signal, welches nicht alle Anforderungen eines gültigen
            Fair Catch Signales erfüllt. Der Ball wird gefangen (a) von B21 an
            der B-5 oder (b) von B44 an der B-5.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird mit dem Fangen dead. (a) B’s Ball, 1. und 10 von
                der B-25; (b) B’s Ball, 1. und 10 von der B-5.
            </p>
        </details>
    </div>
</article>
